--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,9 @@ php:
 
 before_script: composer install
 
-script: phpunit --coverage-text
+script:
+  - phpunit --testsuite travis-ci
+  - phpunit --coverage-text --coverage-clover=coverage.clover
+
+after_script:
+  - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
