--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.5.0",
         "psr/http-message": "^1.0",
-        "respect/validation": "^1.1"
+        "respect/validation": "^1.1 >=1.1.23"
     },
     "require-dev": {
         "slim/slim": "~3.0",
