Use config.platform.php to set the version of the PHP environment

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
         "psr-4": {
             "DavidePastore\\Slim\\Validation\\Tests\\": "tests"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "5.5"
+        }
     }
 }
