--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 language: php
+dist: trusty
 
 php:
-  - 5.5
+  - hhvm
   - 5.6
   - 7.0
-  - hhvm
+  - 7.1
+  - 7.2
+  - 7.3
+  - 7.4
+
+matrix:
+  allow_failures:
+    - php: hhvm
+      dist: trusty
 
 before_script: composer install
 
