--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "psr/http-message": "^1.0",
-        "respect/validation": "^1.1 >=1.1.23"
+        "php": ">=7.2.0",
+        "respect/validation": "^1.1 >=1.1.23 || ^2.0"
     },
     "require-dev": {
-        "slim/slim": "~3.0",
-        "phpunit/phpunit": "^4.0",
+        "slim/slim": "~4.0",
+        "phpunit/phpunit": "^8.5",
         "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
@@ -32,7 +31,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.5"
+            "php": "7.2"
         }
     }
 }
