--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "respect/validation": "^1.1 >=1.1.23 || ^2.0"
+        "respect/validation": "^2.0"
     },
     "require-dev": {
         "slim/slim": "~4.0",
-        "phpunit/phpunit": "^8.5",
+        "slim/psr7": "^1.3",
+        "slim/http": "^1.2",
+        "php-di/php-di": "^6.3",
+        "phpunit/phpunit": "^8.0 || ^9.0",
         "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
