--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,15 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=7.4.0",
         "psr/http-message": "^1.0",
-        "respect/validation": "^1.1 >=1.1.23"
+        "respect/validation": "^1.1 >=1.1.23",
+        "slim/http": "^1.3",
+        "slim/psr7": "^1.6"
     },
     "require-dev": {
-        "slim/slim": "~3.0",
-        "phpunit/phpunit": "^4.0",
+        "slim/slim": "~4.0",
+        "phpunit/phpunit": "^9.0",
         "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
@@ -32,7 +34,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.5"
+            "php": "7.4"
         }
     }
 }
