--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require-dev": {
         "slim/slim": "~3.0",
         "phpunit/phpunit": "^4.0",
-        "scrutinizer/ocular": "~1.1"
+        "scrutinizer/ocular": "1.7.*"
     },
     "autoload": {
         "psr-4": {
