--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=7.4.0",
         "psr/http-message": "^1.0",
         "respect/validation": "^1.1 >=1.1.23",
-        "slim/http": "^1.3",
+        "slim/http": "^0.7|^1.3",
         "slim/psr7": "^1.6"
     },
     "require-dev": {
