--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0",
+        "php": "^7.1",
         "psr/http-message": "^1.0",
         "respect/validation": "^1.1 >=1.1.23",
         "slim/http": "^0.7|^1.3",
