--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "psr/http-message": "^1.0",
         "respect/validation": "^1.1 >=1.1.23",
         "slim/http": "^0.7|^1.3",
-        "slim/psr7": "^1.6"
+        "slim/psr7": "^0.3|^1.6"
     },
     "require-dev": {
         "slim/slim": "~4.0",
