--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,13 @@
         "php": "^7.1",
         "psr/http-message": "^1.0",
         "respect/validation": "^1.1 >=1.1.23",
-        "slim/http": "^0.7|^1.3",
+        "slim/http": "^1.3",
         "slim/psr7": "^0.3|^1.6"
     },
     "require-dev": {
         "slim/slim": "~4.0",
         "phpunit/phpunit": "^7.0",
-        "scrutinizer/ocular": "1.5.*",
-        "psr/http-factory": "^1.0"
+        "scrutinizer/ocular": "1.5.*"
     },
     "autoload": {
         "psr-4": {
