--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -27,9 +27,7 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: PHP Unit tests
-        run: |
-         vendor/bin/phpunit --testsuite travis-ci
-         vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+        run: vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
       
       - name: Upload code coverage data
         run: php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
